# sqlite3.gd

./: .gitignore  CMakeLists.txt  README.md  validate.sh
.github/workflows/: main.yml
demo/: demo.gd  export_presets.cfg  icon.png.import  project.godot  run_in_editor.gd  run_in_editor.gd.uid  test_runner.gd  test_runner_gen_index.gd  test_runner_gen_index.gd.uid  tests.tscn
demo/tests/: index.gd  index.gd.uid  test_01_version_and_constants.gd  test_01_version_and_constants.gd.uid  test_02_open_close_exec.gd  test_02_open_close_exec.gd.uid  test_03_prepare_step_bind_column.gd  test_03_prepare_step_bind_column.gd.uid  test_04_user_functions.gd  test_04_user_functions.gd.uid  test_05_advanced.gd  test_05_advanced.gd.uid  test_autowrapper.gd  test_autowrapper.gd.uid  test_gen.gd  test_gen.gd.uid
doc_classes/autowrapper/: Fts5ApiHandle.xml  Fts5TokenizerHandle.xml  Fts5TokenizerV2Handle.xml  Fts5contextHandle.xml  Fts5extensionapiHandle.xml  Fts5phraseiterHandle.xml  Fts5tokenizerHandle.xml  Sqlite3ApiRoutinesHandle.xml  Sqlite3BackupHandle.xml  Sqlite3BlobHandle.xml  Sqlite3ChangegroupHandle.xml  Sqlite3ChangesetIterHandle.xml  Sqlite3ContextHandle.xml  Sqlite3FileHandle.xml  Sqlite3FilenameHandle.xml  Sqlite3Handle.xml  Sqlite3IndexInfoHandle.xml  Sqlite3IoMethodsHandle.xml  Sqlite3MemMethodsHandle.xml  Sqlite3ModuleHandle.xml  Sqlite3MutexHandle.xml  Sqlite3MutexMethodsHandle.xml  Sqlite3PcacheHandle.xml  Sqlite3PcacheMethods2Handle.xml  Sqlite3PcacheMethodsHandle.xml  Sqlite3PcachePageHandle.xml  Sqlite3RebaserHandle.xml  Sqlite3RtreeGeometryHandle.xml  Sqlite3RtreeQueryInfoHandle.xml  Sqlite3SessionHandle.xml  Sqlite3SnapshotHandle.xml  Sqlite3StmtHandle.xml  Sqlite3StrHandle.xml  Sqlite3ValueHandle.xml  Sqlite3VfsHandle.xml  Sqlite3VtabCursorHandle.xml  Sqlite3VtabHandle.xml  Sqlite3Wrapper.xml  SqliteWrapper.xml
src/: SQLite3.cpp  SQLite3.h  SQLite3Backup.h  SQLite3Binding.h  SQLite3Blob.h  SQLite3Database.cpp  SQLite3Database.h  SQLite3ResultSet.h  SQLite3Statement.h  register_types.cpp  register_types.h  register_types.sh
src/autowrapper/: .autowrapper_cache.json  Sqlite3Wrapper.cpp  Sqlite3Wrapper.h  SqliteWrapper.cpp  SqliteWrapper.h  SqliteWrapper_module.cpp  SqliteWrapper_module.h  module.cpp  module.h
